--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -85,7 +85,7 @@
     android:layout_gravity="center"
     android:layout_marginTop="24dp"
         android:layout_margin="15dp"
-    android:backgroundTint="#145C1E"
+    android:backgroundTint="#27A4F2"
     android:text="Login"
     android:textColor="@android:color/white" />
 
