--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -105,8 +105,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="20dp"
-            android:backgroundTint="#064B1B"
+            android:backgroundTint="#27A4F2"
             android:text="@string/signup"
+
             android:textColor="@android:color/white" />
 
 
