--- a/app/src/main/res/layout/dialog_layout_budget.xml
+++ b/app/src/main/res/layout/dialog_layout_budget.xml
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/green_dark"
+            android:backgroundTint="#27A4F2"
             android:padding="12dp"
             android:minHeight="48dp"
             android:text="Cancel"
@@ -101,7 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/green_dark"
+            android:backgroundTint="#27A4F2"
             android:padding="12dp"
             android:minHeight="48dp"
             android:text="Save"
