--- a/app/src/main/res/layout/dialog_layout_expense.xml
+++ b/app/src/main/res/layout/dialog_layout_expense.xml
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/green_dark"
+            android:backgroundTint="#27A4F2"
             android:padding="12dp"
             android:minHeight="48dp"
             android:text="Cancel"
@@ -100,9 +100,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/green_dark"
-            android:padding="12dp"
+            android:backgroundTint="#27A4F2"
             android:minHeight="48dp"
+            android:padding="12dp"
             android:text="Save"
             android:textColor="@color/white"
             android:textSize="16sp" />
