--- a/app/src/main/res/layout/fragment_budget.xml
+++ b/app/src/main/res/layout/fragment_budget.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="80dp"
-        android:background="@drawable/bg_item_budget"
+        android:backgroundTint="#27A4F2"
         android:paddingHorizontal="20dp"
         android:paddingVertical="12dp"
         android:text="CREATE NEW"
